applications/openeuler-discourse/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: discourse
  name: discourse
