applications/openeuler-discourse/discourse.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-server
  labels:
    app: web-server
  namespace: discourse
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: web-server
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
  namespace: discourse
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
      - name: web-server
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/discourse:v1.1.8
        command: ["/sbin/boot"]
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 1
            memory: 2000Mi
          limits:
            cpu: 2
            memory: 4000Mi
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: discourse-storage
          mountPath: /shared
      volumes:
      - name: discourse-storage
        persistentVolumeClaim:
          claimName: web-share-volume
