applications/openeuler-discourse/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: discourse-ingress
  namespace: discourse
spec:
  tls:
    - hosts:
        - forum.openeuler.org
      secretName: discourse-tls
  rules:
    - host: forum.openeuler.org
      http:
        paths:
          - backend:
              serviceName: web-server
              servicePort: 80
            path: /
